--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -9,11 +9,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get_it: ^7.6.4
+  easy_localization: ^3.0.3
+  easy_logger: ^0.0.2
+  adaptive_theme: ^3.4.1
+  connectivity_plus: ^5.0.1
+  path_provider: ^2.1.1
+  hive: ^2.2.3
+  flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.2
+  fluro: ^2.0.5
+  uuid: ^3.0.7
+  dio: ^5.3.3
+  dio_smart_retry: ^6.0.0
+  dio_http2_adapter: ^2.3.1
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  intl: ^0.18.1
+  json_annotation: ^4.8.1
+  visibility_aware_state: ^1.0.5
+  styled_text: ^8.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
+  build_runner: ^2.3.0
+  json_serializable: ^6.5.4
+  dart_code_metrics: ^5.7.5
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
+    - assets/translations/
