--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  async: ^2.11.0
   get_it: ^7.6.4
   easy_localization: ^3.0.3
   easy_logger: ^0.0.2
